--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,17 @@ name = "exchange"
 version = "0.1.0"
 
 [dependencies]
-bytes = "1.2"
+# bytes = "1.2"
 exchange-domain = {path = "./domain"}
 exchange-service = {path = "./service"}
-prost = "0.11.2"
-serde = "1.0.147"
-serde_json = "1.0.87"
+# prost = "0.11.2"
+# serde = "1.0.147"
+# serde_json = "1.0.87"
+structopt = "0.3"
 tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
 tonic = "0.8"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [workspace]
 members = [
