--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -5,8 +5,10 @@ version = "0.1.0"
 
 [dependencies]
 bytes = "1.2"
+chrono = {version = "0.4", features = ["serde"]}
 prost = "0.11"
 serde = {version = "1", features = ["derive"]}
+sorted-vec = "0.8"
 
 [build-dependencies]
 prost-build = "0.11"
