--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -4,9 +4,12 @@ name = "exchange-service"
 version = "0.1.0"
 
 [dependencies]
+anyhow = "1"
 prost = "0.11"
+redis = {version = "0.22.1", features = ["tokio-comp"]}
 serde = {version = "1", features = ["derive"]}
 tonic = "0.8"
+tracing = "0.1"
 
 [build-dependencies]
 tonic-build = "0.8"
