--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,20 +8,16 @@ name = "exchange"
 version = "0.1.0"
 
 [dependencies]
-# bytes = "1.2"
-exchange-domain = {path = "./domain"}
-exchange-service = {path = "./service"}
-# prost = "0.11.2"
-# serde = "1.0.147"
-# serde_json = "1.0.87"
 structopt = "0.3"
 tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
 tonic = "0.8"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-[workspace]
-members = [
-  "domain",
-  "service",
-]
+bytes = "1.2"
+chrono = {version = "0.4", features = ["serde"]}
+serde = {version = "1", features = ["derive"]}
+
+anyhow = "1"
+redis = {version = "0.22.1", features = ["tokio-comp"]}
+sorted-vec = "0.8"
