--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,18 @@ name = "exchange"
 version = "0.1.0"
 
 [dependencies]
+anyhow = "1"
+async-trait = "0.1"
+bincode = "1.3"
+bytes = "1.2"
+chrono = {version = "0.4", features = ["serde"]}
+futures = "0.3"
+redis = {version = "0.22", features = ["tokio-comp"]}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
+sorted-vec = "0.8"
 structopt = "0.3"
 tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
 tonic = "0.8"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-bytes = "1.2"
-chrono = {version = "0.4", features = ["serde"]}
-serde = {version = "1", features = ["derive"]}
-
-anyhow = "1"
-redis = {version = "0.22.1", features = ["tokio-comp"]}
-sorted-vec = "0.8"
