--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
 tonic = "0.8"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+uuid = {version = "1.2", features = ["v4", "serde"]}
