--- a/server/package.json
+++ b/server/package.json
@@ -5,29 +5,39 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "check": "tsc --noEmit",
-    "start": "vite-node -w ./src/index.ts",
+    "start": "vite-node -w ./src/server.ts",
     "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.14",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fp-ts": "^2.13.1",
     "io-ts": "^2.2.19",
     "io-ts-types": "^0.5.19",
-    "prettier": "^2.7.1",
     "redis": "^4.4.0",
-    "typescript": "^4.8.4",
-    "uuid": "^9.0.0",
-    "vite": "^3.2.3",
-    "vite-node": "^0.24.5",
-    "vitest": "^0.24.5"
+    "svelte-tiny-linked-charts": "^1.1.4",
+    "sveltestrap": "^5.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@sveltejs/vite-plugin-svelte": "^2.0.1",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/express": "^4.17.14",
+    "@types/react": "^18.0.26",
+    "@types/uuid": "^9.0.0",
+    "prettier": "^2.7.1",
+    "svelte": "^3.55.0",
+    "svelte-check": "^2.10.2",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "vite-node": "^0.24.5",
+    "vitest": "^0.24.5"
   }
 }
