--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.26",
     "@types/uuid": "^9.0.0",
