--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,4 +1,8 @@
 [[bin]]
+name = "web"
+path = "src/web.rs"
+
+[[bin]]
 name = "main"
 path = "src/main.rs"
 
@@ -19,8 +23,10 @@ serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 sorted-vec = "0.8"
 structopt = "0.3"
-tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
+tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+tokio-tungstenite = "0.18"
 tonic = "0.8"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = {version = "1.2", features = ["v4", "serde"]}
+warp = "0.3"
