--- a/engine/server/Cargo.toml
+++ b/engine/server/Cargo.toml
@@ -4,30 +4,25 @@ path = "src/main.rs"
 
 [package]
 edition = "2021"
-name = "exchange"
+name = "server"
 version = "0.1.0"
 
 [dependencies]
 anyhow = "1"
 async-trait = "0.1"
 bincode = "1.3"
+# bmrng = "0.5"
 bytes = "1.2"
 chrono = {version = "0.4", features = ["serde"]}
-domain = {path = "./domain"}
-engine = {path = "./engine"}
+domain = {path = "../domain"}
+# futures = "0.3"
 redis = {version = "0.22", features = ["tokio-comp"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
-# server = {path = "./server"}
 structopt = "0.3"
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+# tonic = "0.8"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = {version = "1.2", features = ["v4", "serde"]}
-
-[workspace]
-members = [
-  "domain",
-  "engine",
-  "server",
-]
+warp = "0.3"
