--- a/engine/engine/Cargo.toml
+++ b/engine/engine/Cargo.toml
@@ -12,7 +12,7 @@ bincode = "1.3"
 bytes = "1.2"
 chrono = {version = "0.4", features = ["serde"]}
 domain = {path = "../domain"}
-redis = {version = "0.22", features = ["tokio-comp"]}
+redis = {version = "0.22", features = ["tokio-comp", "r2d2"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 structopt = "0.3"
