--- a/engine/server/Cargo.toml
+++ b/engine/server/Cargo.toml
@@ -15,7 +15,8 @@ bincode = "1.3"
 bytes = "1.2"
 chrono = {version = "0.4", features = ["serde"]}
 domain = {path = "../domain"}
-r2d2 = "0.8.10"
+engine = {path = "../engine"}
+r2d2 = "0.8"
 # futures = "0.3"
 redis = {version = "0.22", features = ["tokio-comp"]}
 serde = {version = "1", features = ["derive"]}
@@ -23,6 +24,7 @@ serde_json = "1"
 structopt = "0.3"
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 # tonic = "0.8"
+lazy_static = "1.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = {version = "1.2", features = ["v4", "serde"]}
